src/include/dart_api.h


typedef struct _Dart_Isolate* Dart_Isolate;
typedef struct _Dart_Handle* Dart_Handle;
DART_EXPORT Dart_Isolate Dart_CurrentIsolate(void);
DART_EXPORT void Dart_AddSymbols(const char* dso_name,
                                 void* buffer,
                                 intptr_t buffer_size);
DART_EXPORT void Dart_ExitIsolate(void);
DART_EXPORT DART_API_WARN_UNUSED_RESULT Dart_Handle
Dart_CreateSnapshot(uint8_t** vm_snapshot_data_buffer,
                    intptr_t* vm_snapshot_data_size,
                    uint8_t** isolate_snapshot_data_buffer,
                    intptr_t* isolate_snapshot_data_size,
                    bool is_core);
DART_EXPORT bool Dart_IsKernel(const uint8_t* buffer, intptr_t buffer_size);
DART_EXPORT DART_API_WARN_UNUSED_RESULT char* Dart_IsolateMakeRunnable(
    Dart_Isolate isolate);
typedef void (*Dart_MessageNotifyCallback)(Dart_Isolate destination_isolate);
DART_EXPORT void Dart_SetMessageNotifyCallback(
    Dart_MessageNotifyCallback message_notify_callback);
DART_EXPORT Dart_MessageNotifyCallback Dart_GetMessageNotifyCallback(void);
DART_EXPORT bool Dart_ShouldPauseOnStart(void);
DART_EXPORT void Dart_SetShouldPauseOnStart(bool should_pause);
DART_EXPORT bool Dart_IsPausedOnStart(void);
DART_EXPORT void Dart_SetPausedOnStart(bool paused);
DART_EXPORT bool Dart_ShouldPauseOnExit(void);
DART_EXPORT void Dart_SetShouldPauseOnExit(bool should_pause);
DART_EXPORT bool Dart_IsPausedOnExit(void);
DART_EXPORT void Dart_SetPausedOnExit(bool paused);
DART_EXPORT void Dart_SetStickyError(Dart_Handle error);
DART_EXPORT bool Dart_HasStickyError(void);
DART_EXPORT Dart_Handle Dart_GetStickyError(void);
DART_EXPORT void Dart_ExitScope(void);
DART_EXPORT bool Dart_IsPrecompiledRuntime(void);